# japanese-alpaca-lora-trial

./: Makefile  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: alpaca_japanese_train.ipynb
src/: generate.py
